--- a/CRMManage/WebContent/WEB-INF/web.xml
+++ b/CRMManage/WebContent/WEB-INF/web.xml
@@ -30,17 +30,17 @@
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
   <servlet>
-  	<servlet-name>mvc</servlet-name>
+  	<servlet-name>CRMManage</servlet-name>
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   	<init-param>
-  		<param-name>contextConfigLocation</param-name>
-  		<param-value>classpath:spring/spring-*.xml</param-value>
-  	</init-param>	
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:spring/spring-*.xml</param-value>
+    </init-param>
   	<load-on-startup>1</load-on-startup>
   </servlet>
   
   <servlet-mapping>
-  	<servlet-name>mvc</servlet-name>
+  	<servlet-name>CRMManage</servlet-name>
   	<url-pattern>/</url-pattern>
   </servlet-mapping>
   
